# storage/api-docs/api-docs.json
@@ -2192,6 +2192,10 @@
                                         "type": "string",
                                         "format": "binary"
                                     },
+                                    "site_ytb": {
+                                        "type": "string",
+                                        "format": "KqcG3gfhg-w"
+                                    },
                                     "cp_address": {
                                         "type": "string",
                                         "example": "123 Main Street"
